# kaggle-efficient-chess-ai-challenge

./: README.md  pyproject.toml  run.py
scripts/: baseline_agent.py
